--- a/_config.yml
+++ b/_config.yml
@@ -19,3 +19,10 @@ jobs:
           run: pip install markdown
         - name: Convert index.md to index.html
           run: make
+        - name: Commit changes
+          run: |
+            git config user.name 'diegoascanio'
+            git config user.email 'dascaniosantos@gmail.com'
+            git add *
+            git commit -m 'convert md to html'
+            git push
