--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -42,7 +42,7 @@ jobs:
         run: |
           git config user.name 'diegoascanio'
           git config user.email 'dascaniosantos@gmail.com'
-          git add *
+          git add index.html
           git commit -m 'convert md to html'
           git push
       - name: Setup Pages
