--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -28,8 +28,6 @@ jobs:
     steps:
       - name: Checkout
       - uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.WORKFLOW_GIT_ACCESS_TOKEN }}
       - name: Installs python3 and python3-pip
         run: sudo apt install -y python3 python3-pip
       - name: Sets a virtual environment
@@ -47,6 +45,8 @@ jobs:
           git add ./index.html
           git commit -m 'convert md to html'
           git push
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Build with Jekyll
