--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -1,6 +1,8 @@
 # Sample workflow for building and deploying a Jekyll site to GitHub Pages
 name: Deploy Jekyll with GitHub Pages dependencies preinstalled
 
+exclude: index.md
+
 on:
     # Runs on pushes targeting the default branch
     push:
@@ -38,6 +40,8 @@ jobs:
               run: pip install markdown
             - name: Convert index.md to index.html
               run: python -m markdown ./index.md > ./index.html
+            - name: Deactivate virtual environment
+              run: deactivate
             - name: Commit changes
               run: |
                   git config user.name 'diegoascanio'
