--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -1,8 +1,6 @@
 # Sample workflow for building and deploying a Jekyll site to GitHub Pages
 name: Deploy Jekyll with GitHub Pages dependencies preinstalled
 
-exclude: index.md
-
 on:
     # Runs on pushes targeting the default branch
     push:
@@ -58,6 +56,8 @@ jobs:
               with:
                   source: ./
                   destination: ./_site
+              exclude:
+                  - index.md
             - name: Upload artifact
               uses: actions/upload-pages-artifact@v3
 
